--- a/package.json
+++ b/package.json
@@ -1,36 +1,49 @@
 {
-  "name": "hello-microverse",
+  "name": "webpack_template",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "<a name=\"readme-top\"></a>",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "webpack serve --open",
+      "build": "webpack",
+      "test": "jest"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hasnatali1947/Hello-microverse.git"
+      "type": "git",
+      "url": "git+https://github.com/hasnatali1947/Webpack-Template"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hasnatali1947/Hello-microverse/issues"
+      "url": "https://github.com/hasnatali1947/Webpack-Template/issues"
   },
-  "homepage": "https://github.com/hasnatali1947/Hello-microverse#readme",
+  "homepage": "https://github.com/hasnatali1947/Webpack-Template#readme",
   "devDependencies": {
-    "@types/luxon": "^3.2.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.27.5",
-    "hint": "^7.1.3",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0"
+      "@babel/core": "^7.21.4",
+      "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+      "@babel/preset-env": "^7.21.5",
+      "babel-eslint": "^10.1.0",
+      "babel-jest": "^29.5.0",
+      "css-loader": "^6.7.3",
+      "csv-loader": "^3.0.5",
+      "eslint": "^7.32.0",
+      "eslint-config-airbnb-base": "^14.2.1",
+      "eslint-plugin-import": "^2.27.5",
+      "html-webpack-plugin": "^5.5.0",
+      "jest": "^29.5.0",
+      "style-loader": "^3.3.1",
+      "stylelint": "^13.13.1",
+      "stylelint-config-standard": "^21.0.0",
+      "stylelint-csstree-validator": "^1.9.0",
+      "stylelint-scss": "^3.21.0",
+      "webpack": "^5.75.0",
+      "webpack-cli": "^5.0.1",
+      "webpack-dev-server": "^4.11.1",
+      "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "i": "^0.3.7",
-    "regenerator-runtime": "^0.13.11"
-  }
+      "lodash": "^4.17.21"
+  },
+  "testEnvironment": "jsdom"
 }
